[package]
name = "kong_ics"
version = "0.1.0"
edition = "2021"
authors = ["dexbot"]
default-run = "kong_ics"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
futures = "0.3"
dotenvy = "0.15"

candid = { version = "0.10", features = ["value"] }
ic-agent = { version = "0.31", default-features = false, features = ["reqwest", "pem"] }

# agent-rs フォークを使う場合は下記を有効化し、パスを調整してください
# [patch.crates-io]
# ic-agent = { path = "vendor/agent-rs/ic-agent" }
